--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,7 +7,7 @@ body {
             text-align: center;
             max-width: 700px;
         }
-
+        /*
         button {
             border: none;
             background: #0090ff;
@@ -19,7 +19,7 @@ body {
             cursor: pointer;
             display: none;
         }
-
+        */
         input#imagefield {
             display: block;
             top: 0;
@@ -84,7 +84,16 @@ body {
         }
         .drop-caption {
             position: absolute;
-            top: 84px;
+            top: 50%;
             font-size: 21px;
             padding: 50px;
+            transform: translateY(-45%);
         }
+        .image-slider {
+    height: 200px;
+}
+.image-slider img {
+    margin-right: 15px;
+    outline: none;
+    cursor: pointer;
+}
