--- a/views/index.jade
+++ b/views/index.jade
@@ -3,6 +3,7 @@ html
     title Распознать картину по фото
     script(src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js")
     script(src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js")
+    meta(name='theme-color' content="#222222")
     meta(name='viewport', content='width=device-width, initial-scale=1.0')
     link(rel="stylesheet", href="https://bootswatch.com/darkly/bootstrap.min.css")
     script(src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick.min.js")
