--- a/views/index.jade
+++ b/views/index.jade
@@ -77,6 +77,33 @@ html
           .modal-footer
             button.btn.btn-default(type='button', data-dismiss='modal') Закрыть
             button.btn.btn-primary(type='button' disabled) Отправить
+    script(type='text/javascript').
+      (function (d, w, c) {
+      (w[c] = w[c] || []).push(function() {
+      try {
+      w.yaCounter43337319 = new Ya.Metrika({
+      id:43337319,
+      clickmap:true,
+      trackLinks:true,
+      accurateTrackBounce:true,
+      webvisor:true
+      });
+      } catch(e) { }
+      });
+      var n = d.getElementsByTagName("script")[0],
+      s = d.createElement("script"),
+      f = function () { n.parentNode.insertBefore(s, n); };
+      s.type = "text/javascript";
+      s.async = true;
+      s.src = "https://mc.yandex.ru/metrika/watch.js";
+      if (w.opera == "[object Opera]") {
+      d.addEventListener("DOMContentLoaded", f, false);
+      } else { f(); }
+      })(document, window, "yandex_metrika_callbacks");
+    noscript
+      div
+        img(src='https://mc.yandex.ru/watch/43337319', style='position:absolute; left:-9999px;', alt='')
+
    script.
     $('.image-slider').slick({
           dots: false,
