--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,7 @@
 body {
             font-family: sans-serif;
+            background: #222b2f;
+            transition: 0.5s;
         }
         .main-block {
             width: 100%;
@@ -96,4 +98,22 @@ body {
     margin-right: 15px;
     outline: none;
     cursor: pointer;
+}
+nav.navbar.navbar-default {
+    background-color: #ffeb3b;
+    box-shadow: 0px 5px 0px #f0d625;
+    border-radius: 0;
+}
+
+.navbar-default .navbar-nav>li>a {
+    color: #607d8b;
+}
+
+.navbar-default .navbar-brand {
+    color: #607d8b;
+}
+
+body.zav-spec {
+    background-image: url('/img/zavback.png');
+    background-size: cover;
 }
