--- a/views/index.jade
+++ b/views/index.jade
@@ -13,14 +13,14 @@ html
     link(rel="stylesheet", href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick-theme.min.css")
   body
     nav.navbar.navbar-default
-          .container-fluid
+          .container
             .navbar-header
               button.navbar-toggle.collapsed(type='button', data-toggle='collapse', data-target='#bs-example-navbar-collapse-1')
                 span.sr-only Toggle navigation
                 span.icon-bar
                 span.icon-bar
                 span.icon-bar
-              a.navbar-brand(href='#') Распознавание изображений
+              a.navbar-brand(href='#') Mart
             #bs-example-navbar-collapse-1.collapse.navbar-collapse
               ul.nav.navbar-nav
                 li
@@ -34,7 +34,7 @@ html
                     a(href='#' data-toggle="modal" data-target="#suggestModal") Предложить изображение
 
     .main-block
-       h3.text-center Известные мне картины
+       h3.text-center Некоторые известные мне картины
        .image-slider
             each image in images
                 img(src='/'+image.name+'@'+image.painter+'.jpg', alt=image.name+' '+image.painter title=image.name+' '+image.painter data-image=image.id)
@@ -125,8 +125,14 @@ html
                                 $('.results-block h2').text(data.name);
                                 $('.results-block h3').text(data.painter);
                                 $('.wiki-text').html(data.wiki);
-                                $('.wiki-text').append('<a href="https://www.google.ru/search?q='+data.name+' '+data.painter+'" target="_blank">Результаты поиска Google</a>')
+                                $('.wiki-text').append(data.spectext);
+                                $('.wiki-text').append('<br><a href="https://www.google.ru/search?q='+data.name+' '+data.painter+'" target="_blank">Результаты поиска Google</a>')
                                 $('html, body').animate({ scrollTop: $(".results-block").offset().top }, 500);
+                                if (data.spectext) {
+                      $('body').addClass('zav-spec');
+                      } else {
+                        $('body').removeClass('zav-spec');
+                      }
             });
         })
       $('#openfile').on('click', function() {
@@ -153,6 +159,11 @@ html
                     $('.results-block h2').text(data.name);
                     $('.results-block h3').text(data.painter);
                     $('html, body').animate({ scrollTop: $(".results-block").offset().top }, 500);
+                    if (data.spectext) {
+                      $('body').addClass('zav-spec');
+                      } else {
+                        $('body').removeClass('zav-spec');
+                      }
                 } else {
                     $('.results-block img').attr('src', "");
                     $('.results-block h2').text('Не удалось распознать');
@@ -197,8 +208,14 @@ html
                                 $('.results-block h2').text(data.name);
                                 $('.results-block h3').text(data.painter);
                                 $('.wiki-text').html(data.wiki);
-                                $('.wiki-text').append('<a href="https://www.google.ru/search?q='+data.name+' '+data.painter+'" target="_blank">Результаты поиска Google</a>')
+                                $('.wiki-text').append(data.spectext);
+                                $('.wiki-text').append('<br><a href="https://www.google.ru/search?q='+data.name+' '+data.painter+'" target="_blank">Результаты поиска Google</a>')
                                 $('html, body').animate({ scrollTop: $(".results-block").offset().top }, 500);
+                                if (data.spectext) {
+                                $('body').addClass('zav-spec');
+                                } else {
+                                  $('body').removeClass('zav-spec');
+                                }
 
                             } else {
                                 $('.results-block img').attr('src', "");
